alternative s3 driver by Michael Kostylev <mik@niipt.ru>
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@326 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/vidix/drivers/Makefile
+++ b/vidix/vidix/drivers/Makefile
@@ -24,6 +24,7 @@ DRV=    cyberblade_vid.so \
 	pm3_vid.so \
 	radeon_vid.so \
 	rage128_vid.so \
+	s3_vid.so \
 	savage_vid.so \
 	sis_vid.so \
 	unichrome_vid.so \
@@ -90,6 +91,9 @@ radeon_vid.so: radeon_vid.o
 	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 rage128_vid.so: rage128_vid.o
+
+s3_vid.so: s3_vid.o
+	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 savage_vid.so: savage_vid.o
 	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
