--- a/vidix/vidix/drivers/Makefile
+++ b/vidix/vidix/drivers/Makefile
@@ -60,52 +60,52 @@ rage128_vid.o: radeon_vid.c
 
 # Dynamic librairies
 %.so: %.o
-	$(CC) -shared $^ $(VIDIX_LIBS) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $^ $(VIDIX_LIBS) -Wl,-soname,$@ -o $@
 
 cyberblade_vid.so: cyberblade_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 genfb_vid.so: genfb_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 ivtvfb_vid.so: ivtv_vid.o
 
 mach64_vid.so: mach64_vid.o
 
 mga_crtc2_vid.so: mga_crtc2_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 mga_tv_vid.so: mga_tv_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 mga_vid.so: mga_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 nvidia_vid.so: nvidia_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 pm2_vid.so: pm2_vid.o
 
 pm3_vid.so: pm3_vid.o
 
 radeon_vid.so: radeon_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 radeonhd_vid.so: radeonhd_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 rage128_vid.so: rage128_vid.o
 
 s3_vid.so: s3_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 savage_vid.so: savage_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS_M) -Wl,-soname,$@ -o $@
 
 sis_vid.so: sis_vid.o sis_bridge.o
 
 unichrome_vid.so: unichrome_vid.o
-	$(CC) -shared $< $(VIDIX_LIBS) -Wl,-soname,$@ -o $@
+	$(CC) $(LDFLAGS) -shared $< $(VIDIX_LIBS) -Wl,-soname,$@ -o $@
 
 clean:
 	rm -f *.o *.so *~
@@ -117,13 +117,13 @@ dep depend:
 	$(CC) -MM $(CFLAGS) $(SRCS) 1>.depend
 
 install:
-	mkdir -p $(DESTDIR)$(DRV_LIBDIR)
-	install -m 755 -p *.so $(DESTDIR)$(DRV_LIBDIR)
+	mkdir -p $(DRV_LIBDIR)
+	install -m 755 -p *.so $(DRV_LIBDIR)
 	if test -d $(OLDLIBDIR) ; then rm -f $(OLDLIBDIR)/*.so ; rmdir -p --ignore-fail-on-non-empty $(OLDLIBDIR) ; fi
 
 uninstall:
-	rm -f $(DESTDIR)$(DRV_LIBDIR)/*.so
-	rmdir -p --ignore-fail-on-non-empty $(DESTDIR)$(DRV_LIBDIR)
+	rm -f $(DRV_LIBDIR)/*.so
+	rmdir -p --ignore-fail-on-non-empty $(DRV_LIBDIR)
 
 ifneq ($(wildcard .depend),)
 include .depend
