--- a/vidix/vidix/Makefile
+++ b/vidix/vidix/Makefile
@@ -15,8 +15,8 @@ SRCS        = vidixlib.c
 OBJS=$(SRCS:.c=.o)
 SHOBJS=$(SRCS:.c=.po)
 
-CFLAGS  = $(OPTFLAGS) -I..
-SHCFLAGS= $(CFLAGS) -fPIC
+CFLAGS  = $(OPTFLAGS) -I.. -DVIDIX_COMPILE_STATIC
+SHCFLAGS= $(OPTFLAGS) -I.. -fPIC
 
 SUBDIRS = drivers
 DO_MAKE = @ for i in $(SUBDIRS); do $(MAKE) -C $$i $@ || exit; done
@@ -28,29 +28,29 @@ endif
 
 .SUFFIXES: .c .o .po
 
-ifeq ($(VIDIX_BUILD_STATIC),yes)
+ifeq ($(VIDIX_STATIC),yes)
 .PHONY: $(SUBDIRS)
 endif
 
 LIB_TARGETS=
-ifeq ($(VIDIX_BUILD_SHARED),yes)
+ifeq ($(VIDIX_SHARED),yes)
 LIB_TARGETS += $(LIBNAME_SHARED_VERSION)
 endif
-ifeq ($(VIDIX_BUILD_STATIC),yes)
+ifeq ($(VIDIX_STATIC),yes)
 LIB_TARGETS += $(LIBNAME)
 endif
 ifeq ($(TARGET_WIN32),yes)
 LIB_TARGETS += $(LIBNAME_WIN32)
 endif
 
-ifeq ($(VIDIX_BUILD_STATIC),yes)
+ifeq ($(VIDIX_STATIC),yes)
 all:	$(LIB_TARGETS)
 endif
-ifeq ($(VIDIX_BUILD_SHARED),yes)
+ifeq ($(VIDIX_SHARED),yes)
 all:	$(LIB_TARGETS) do_drivers
 endif
 
-ifeq ($(VIDIX_BUILD_STATIC),yes)
+ifeq ($(VIDIX_STATIC),yes)
 $(SUBDIRS):
 	$(DO_ALL)
 endif
@@ -60,7 +60,7 @@ endif
 .c.po:
 	$(CC) -c $(SHCFLAGS) -o $@ $<
 
-ifeq ($(VIDIX_BUILD_SHARED),yes)
+ifeq ($(VIDIX_SHARED),yes)
 $(LIBNAME_SHARED_VERSION): $(SHOBJS)
 	$(CC) $(LDFLAGS) -shared -Wl,-soname -Wl,$@ -o $@ $(SHOBJS) -lc $(LIBDL)
 $(LIBNAME_WIN32): $(OBJS)
@@ -71,7 +71,7 @@ ifneq  ($(TARGET_OS),CYGWIN)
 endif
 endif
 
-ifeq ($(VIDIX_BUILD_STATIC),yes)
+ifeq ($(VIDIX_STATIC),yes)
 $(LIBNAME):  $(SUBDIRS) $(OBJS)
 	$(AR) r $@ $(OBJS) \
 	$(wildcard drivers/*.o)
@@ -94,13 +94,13 @@ dep depend:
 
 install:
 	mkdir -p $(DESTDIR)$(LIBDIR)
-ifeq ($(VIDIX_BUILD_SHARED),yes)
+ifeq ($(VIDIX_SHARED),yes)
 	install -m 755 -s -p $(LIBNAME_SHARED_VERSION) $(DESTDIR)$(LIBDIR)
 	ln -sf $(LIBNAME_SHARED_VERSION) $(DESTDIR)$(LIBDIR)/$(LIBNAME_SHARED)
 	ln -sf $(LIBNAME_SHARED_VERSION) $(DESTDIR)$(LIBDIR)/$(LIBNAME_SHARED_MAJOR)
 	-$(LDCONFIG) $(LDCONFIG_FLAGS)
 endif
-ifeq ($(VIDIX_BUILD_STATIC),yes)
+ifeq ($(VIDIX_STATIC),yes)
 	cp -f $(LIBNAME) $(DESTDIR)$(LIBDIR)
 endif
 
@@ -112,11 +112,11 @@ endif
 	$(MAKE) -C drivers install
 
 uninstall:
-ifeq ($(VIDIX_BUILD_SHARED),yes)
+ifeq ($(VIDIX_SHARED),yes)
 	rm -f $(DESTDIR)$(LIBDIR)/$(LIBNAME_SHARED)*
 	-$(LDCONFIG) $(LDCONFIG_FLAGS)
 endif
-ifeq ($(VIDIX_BUILD_STATIC),yes)
+ifeq ($(VIDIX_STATIC),yes)
 	rm -f $(DESTDIR)$(LIBDIR)/$(LIBNAME)
 endif
 	rm -f $(DESTDIR)$(INCDIR)/fourcc.h $(DESTDIR)$(INCDIR)/vidix.h $(DESTDIR)$(INCDIR)/vidixlib.h
